SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/SA_Handoff__c.object-meta.xml
<CustomObject>
    <label>SA Handoff</label>
    <nameField>
        <label>SA Handoff</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SA Handoffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>