SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Account_Blockers__c.field-meta.xml
<CustomField>
    <fullName>Account_Blockers__c</fullName>
    <inlineHelpText>Person or circumstance preventing account from further expansion</inlineHelpText>
    <label>Account Blockers</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>