SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Account_Risks__c.field-meta.xml
<CustomField>
    <fullName>Account_Risks__c</fullName>
    <inlineHelpText>Concerns, risks, expected difficulties?</inlineHelpText>
    <label>Account Risks</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>