SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Initiatives__c</fullName>
    <inlineHelpText>Paragraph on goals and initiatives of the team in using LaunchDarkly</inlineHelpText>
    <label>Initiatives</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>