SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Link_to_BVA_Documents__c.field-meta.xml
<CustomField>
    <fullName>Link_to_BVA_Documents__c</fullName>
    <formula>Opportunity__r.BVA_url__c</formula>
    <inlineHelpText>Auto generated from BVA_url from Business Evaluation Section</inlineHelpText>
    <label>Link to BVA Documents</label>
    <type>Text</type>
</CustomField>