SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Needs__c.field-meta.xml
<CustomField>
    <fullName>Needs__c</fullName>
    <inlineHelpText>What should the C/SE need to be aware of for onboarding?</inlineHelpText>
    <label>Needs</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>