SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>CSE_Handoffs</relationshipName>
    <type>Lookup</type>
</CustomField>