SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Record_Number__c.field-meta.xml
<CustomField>
    <fullName>Record_Number__c</fullName>
    <displayFormat>CSE-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Record Number</label>
    <type>AutoNumber</type>
</CustomField>