SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Solutions_Architect__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>See BIZ-118. Field originally called Customer Success Engineer.</description>
    <label>Solutions Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SA_Handoffs1</relationshipName>
    <type>Lookup</type>
</CustomField>