SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Solutions_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solutions Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSE_Handoffs</relationshipName>
    <type>Lookup</type>
</CustomField>