SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>BIZ-238 - Represents state of handoff. Updated to &apos;Closed&apos; by Opportunity trigger automation when Opp is closed.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>