SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Successes__c.field-meta.xml
<CustomField>
    <fullName>Successes__c</fullName>
    <inlineHelpText>Where have we succeeded, what has gone well?</inlineHelpText>
    <label>Successes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>