SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Team_Info__c.field-meta.xml
<CustomField>
    <fullName>Team_Info__c</fullName>
    <inlineHelpText>Distributed or single location? Org details here</inlineHelpText>
    <label>Team Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>