SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Team_VIPs__c.field-meta.xml
<CustomField>
    <fullName>Team_VIPs__c</fullName>
    <inlineHelpText>Paragraph or list of names of some of the key players on team</inlineHelpText>
    <label>Team VIPs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>