SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack__c</fullName>
    <inlineHelpText>CI/CD tools? SDKs Communication SW (Slack, MS Teams, etc.) Other tools?</inlineHelpText>
    <label>Tech Stack</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>