SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Technical_Champion__c.field-meta.xml
<CustomField>
    <fullName>Technical_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who was our champion and helped drive the sale?</inlineHelpText>
    <label>Technical Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CSE_Handoffs</relationshipName>
    <type>Lookup</type>
</CustomField>