SFDC_LD_Packages/objects-layouts/main/default/objects/SA_Handoff__c/fields/Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Use_Cases__c</fullName>
    <inlineHelpText>List of use cases by team</inlineHelpText>
    <label>Use Cases</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>